--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
         font-family: "Open Sans Condensed", sans-serif;
     }
 </style>
-<body bgcolor="black">
-    <h1 class="heading">Online CrowdFunding</h1>
+<body bgcolor="white">
+    <!-- Hero Text -->
+    <div class="hero-text">
+        <h1 class="hero-heading">Online CrowdFunding</h1>
+        <p class="hero-para">Helping you to raise funds for your projects</p>
+    </div>
+
+    <!-- Login Form -->
     <div class="login-form">
-        <form>
-            <h2>Login</h2>
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-            <p class="message">Not registered? <a href="register.php">Create an account</a></p>
+        <form class="login" method="POST" action="#">
+            <h2 class="heading">Login</h2>
+            <input type="text" name="username" placeholder="Username" required><br>
+            <input type="password" name="password" placeholder="Password" required><br>
+            <button type="submit">Login</button><br>
+            <a class="message" href="register.php">Don't have an account? Register</a>
         </form>
     </div>
 </body>
