--- a/index.html
+++ b/index.html
@@ -22,21 +22,15 @@
 
     <!-- Login Form -->
     <div class="login-form">
-        <form class="login" method="POST" action="#">
+        <form class="login" method="post" action="login.php">
             <h2 class="heading">Login</h2>
-            <input type="text" name="username" placeholder="Username" required><br>
+            <input type="email" name="email" placeholder="Email" required><br>
             <input type="password" name="password" placeholder="Password" required><br>
             <button type="submit" href="home_page.html">Login</button><br>
-            <a class="message" href="register.php">Don't have an account? Register</a>
+            <a class="message" href="register.html">Don't have an account? Register</a>
         </form>
     </div>
     </div>
-    <script>
-        document.querySelector('.login').addEventListener('submit', function(event) {
-            event.preventDefault();
-            window.location.href = 'home_page.html';
-        });
-    </script>
     <!-- <table id="page">
         <tr>
             <div class="hero-text">
