--- a/index.html
+++ b/index.html
@@ -15,39 +15,21 @@
 <body bgcolor="whitesmoke">
     <div class="container">
         <!-- Hero Text -->
-    <div class="hero-text">
-        <h1 class="hero-heading">Online CrowdFunding</h1>
-        <p class="hero-para">Helping you to raise funds for your projects</p>
-    </div>
+        <div class="hero-text">
+            <h1 class="hero-heading">Online CrowdFunding</h1>
+            <p class="hero-para">Helping you to raise funds for your projects</p>
+        </div>
 
-    <!-- Login Form -->
-    <div class="login-form">
-        <form class="login" method="post" action="login.php">
-            <h2 class="heading">Login</h2>
-            <input type="email" name="email" placeholder="Email" required><br>
-            <input type="password" name="password" placeholder="Password" required><br>
-            <button type="submit" href="home_page.html">Login</button><br>
-            <a class="message" href="register.html">Don't have an account? Register</a>
-        </form>
+        <!-- Login Form -->
+        <div class="login-form">
+            <form class="login" method="post" action="login.php">
+                <h2 class="heading">Login</h2>
+                <input type="email" name="emailid" placeholder="Email" required><br>
+                <input type="password" name="password" placeholder="Password" required><br>
+                <button type="submit">Login</button><br>
+                <a class="message" href="register.html">Don't have an account? Register</a>
+            </form>
+        </div>
     </div>
-    </div>
-    <!-- <table id="page">
-        <tr>
-            <div class="hero-text">
-                <h1 class="hero-heading">Online CrowdFunding</h1>
-                <p class="hero-para">Helping you to raise funds for your projects</p>
-            </div>
-        </tr>
-        <tr>
-            <div class="login-form">
-                <form class="login" method="POST" action="#">
-                    <h2 class="heading">Login</h2>
-                    <input type="text" name="username" placeholder="Username" required><br>
-                    <input type="password" name="password" placeholder="Password" required><br>
-                    <button type="submit">Login</button><br>
-                    <a class="message" href="register.php">Don't have an account? Register</a>
-                </form>
-            </div>
-      </table> -->
 </body>
 </html>
