--- a/home_page.html
+++ b/home_page.html
@@ -6,6 +6,22 @@
     body{
         font-family: "Open Sans Condensed", sans-serif;
     }
+    .btn{
+        background-color: #4CAF50;
+        color: white;
+        width: 50%;
+        text-align: center;
+        font-weight: 700;
+        font-size: 15px;
+        padding: 8px 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 20px auto;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+      }
 </style>
 <head>
     <meta charset="UTF-8">
@@ -40,7 +56,11 @@
         <button id="addfrn" onclick="redirectToProjects()">Add Friend</button>
       </div>
     </div>
+    <div class="btn" onclick="redirectToRegisterProject()">Add Project</div>
     <script>
+        function redirectToRegisterProject() {
+            window.location.href = 'register_project.html';
+        }
         function redirectToProjects() {
             window.location.href = 'project_detail.html';
         }
