--- a/home_page.html
+++ b/home_page.html
@@ -56,7 +56,7 @@
         <button id="addfrn" onclick="redirectToProjects()">Add Friend</button>
       </div>
     </div>
-    <div class="btn" onclick="redirectToRegisterProject()">Add Project</div>
+    <div class="btn" onclick="redirectToRegisterProject()"> + Add Project</div>
     <script>
         function redirectToRegisterProject() {
             window.location.href = 'register_project.html';
