updates on the UI

--- a/register_project.html
+++ b/register_project.html
@@ -9,6 +9,7 @@
 
 <body>
     <form action="submit_project.php" method="POST">
+        <img src="assets/download.jpeg" alt="Project Registration Image" id="registration-image" style="display: block; margin: 0 auto;"><br><br>
         <label for="project_name">Project Name:</label>
         <input type="text" id="project_name" name="project_name" required><br><br>
 
